@@ -1,3 +1,10 @@
+2007-04-12  Lorenzo Natale <nat@liralab.it>
+
+	* src/libYARP_dev/CMakeLists.txt
+	* conf/YarpAddExtModule.cmake
+	* example/externalmodules
+	Initial support for adding external devices to YARP.
+
 2007-04-10  Jonas Ruesch  <ruesch@ifi.unizh.ch>
 
 	* src/libYARP_dev/src/urbtc/linux/yarp/UrbtcControl.cpp:
